--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
-    <meta property="og:type" content="Website">
-    <meta property="og:title" content="Dev Burguer - O melhor">
-    <meta property="og:image" content="https://pedro0ag.github.io/hamburgueria/images/hamb-1.png">
-    <meta property="og:description" content="O melhor hamburguer caseiro e nosso!!!">
-    <meta property="og:site_name" content="Dev Burguer">
+    <meta property="og:type" content="Website"/>
+    <meta property="og:title" content="Dev Burguer - O melhor"/>
+    <meta property="og:image" content="https://pedro0ag.github.io/hamburgueria/images/hamb-1.png"/>
+    <meta property="og:description" content="O melhor hamburguer caseiro e nosso!!!"/>
+    <meta property="og:site_name" content="Dev Burguer"/>
 
     <link rel="stylesheet" href="styles/output.css">
     <title>cardapio</title>
