--- a/index.html
+++ b/index.html
@@ -258,6 +258,9 @@
             <input type="text" placeholder="digite seu endereço completo" name="" id="address"
             class="w-full border-2 p-1 rounded my-1">
             <p class="text-red-600 font-bold hidden" id="addressWarn">digite seu endereço completo</p>
+            <p class="mt-4 font-bold">OBS:</p>
+            <input type="text" placeholder="Ex: não quero cebola" name="" id="address-obs"
+            class="w-full border-2 p-1 rounded my-1">
 
             <div class="flex justify-between items-center mt-5 w-full">
                 <button id="close-btn">fechar</button>
